--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,12 @@
     -->
     <title>AskAlma</title>
     <script src="%PUBLIC_URL%/config.js"></script>
+    <!-- Preload critical resources -->
+    <link rel="preload" href="%PUBLIC_URL%/Icon.png" as="image" type="image/png" />
+    <!-- DNS prefetch for external resources -->
+    <link rel="dns-prefetch" href="https://hihmyzlppijfqlxhalbe.supabase.co" />
+    <!-- Preconnect to Supabase for faster auth -->
+    <link rel="preconnect" href="https://hihmyzlppijfqlxhalbe.supabase.co" crossorigin />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
