--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/Icon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/Icon.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#003865" />
     <meta
       name="description"
       content="AskAlma - Your AI Academic Advisor for Columbia University"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Icon.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Icon.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +27,7 @@
     <title>AskAlma</title>
     <script src="%PUBLIC_URL%/config.js"></script>
     <!-- Preload critical resources -->
-    <link rel="preload" href="%PUBLIC_URL%/Icon.png" as="image" type="image/png" />
+    <link rel="preload" href="%PUBLIC_URL%/Icon.jpeg" as="image" type="image/jpeg" />
     <!-- DNS prefetch for external resources -->
     <link rel="dns-prefetch" href="https://hihmyzlppijfqlxhalbe.supabase.co" />
     <!-- Preconnect to Supabase for faster auth -->
